Correct display of pictures on maps on mobile display (portrait for now).

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -208,7 +208,8 @@ $story-show-text-mobile: 20px;
 $story-show-picture-title-desktop: 15px;
 $story-show-picture-title-mobile: 14px;
 
-$story-show-text-map: 14px;
+$story-show-text-map-desktop: 14px;
+$story-show-text-map-mobile: 13px;
 
 /******************************************
              HTML Section
