--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -251,11 +251,12 @@
   }
 }
 
-// properties of Info Box on map
+// properties of marker on map
 .story-show-marker{
   background-color: lighten($background-color, 5%);
   padding: 2px 2px 3px 2px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.30);
+  max-width: 124px;
   img {
     max-width: 120px;
     max-height: inherit;
@@ -344,6 +345,28 @@
     min-height: 670px;
   }
 
+  // properties of marker on map
+  .story-show-marker{
+    padding: 1px 1px 2px 1px;
+    img {
+      max-width: 75px;
+      max-height: inherit;
+    }
+  }
+
+  .story-show-marker-info-window-light{
+    max-width: 262px;
+    padding: 5px 5px 0 5px;
+    img {
+      max-width: 250px;
+    }
+    p{
+      font-size: $story-show-text-map-mobile;
+      color: darken($story-show-section-title-font-color, 40%);
+      padding-left: 8px;
+      padding-top: 8px;
+    }
+  }
 }
 
 @media (min-width: 320px) and (max-width: 767px) and (orientation: landscape ) {
